# miqc-py

./: .gitignore  LICENSE  README.md  environment.yml  miqc_py.ipynb  pyproject.toml
.github/workflows/: test.yml
src/miqc_py/: __init__.py  miqc.py
tests/: test_miqc.py
tests/data/: zeisel_brain.r_results.csv
